test/argotest3.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: argotest31
    argocd.argoproj.io/managed-by: devops
  name: argotest31
spec: {}
