test/dep.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: ecgcdemo
  replicas: 2
  template:
    metadata:
      labels:
        app: ecgcdemo
    spec:
      containers:
      - name: ecgcdemo
        image: docker-registry.cdacmumbai.in:5000/ecgc_demo
        ports:
        - containerPort: 80
