test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabc
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: "myresolver"
spec:
  rules:
    - host: "ucb-tombola.sem-a.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sabc
                port:
                  number: 4000
  tls:
    - hosts:
        - "ucb-tombola.sem-a.com"
      secretName: sabc-tls
