test/ns.yaml
apiVersion: 'v1'
kind: 'Namespace'
metadata:
  name: leo-test
  labels:
    name: leo-test
