test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: sabc
  ports:
    - port: 4000
      targetPort: 4000
