test/ubu_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-argo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu:latest
        command: ["/bin/sleep", "infinity"]  # Keep the container running
